2013-01-11  Doug Simons <doug.simons@testplant.com>

       * NSString.m: Don't strip trailing path separator in
        stringByAppendingPathComponent: when appending the root.
        This fixes problems where adding the components "C:\" and
        "MyFolder" would end up as "C:MyFolder" instead of
        "C:\MyFolder".

2012-10-08  Doug Simons <doug.simons@testplant.com>

        * NSURLProtocol.m: Don't quit writing to output stream when it fails because it would block.

2012-09-09  Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

        * NSDate.m: Added 10.6 Call for - dateByAddingTimeInterval:

2012-06-12  Richard Frith-Macdonald <rfm@gnu.org>

        * NSPropertyList.m: Check for nil property list argument.

2012-06-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/unix/GSRunLoopCtxt.m (-pollUntil:within:): Fix previous
	change to compile again when using select() instead of poll().

2012-06-06  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSSocketPort.m:
        * Source/unix/GSRunLoopCtxt.m:
        * Source/NSMessagePort.m:
        * Source/win32/GSRunLoopCtxt.m:
        Modify code for getting file descriptors to cope with an unlimited
        number (allocate buffer on heap if necessary) for server processes
        with very large numbers of distributed object connections.

2012-04-30 Riccardo Mottola <rm@gnu.org>

	* Source/NSString:
	Do not include malloc on OpenBSD to avoid warning (and include
        stdlib always).

2012-04-29 Riccardo Mottola <rm@gnu.org>

	* Source/common.h:
	Extend David's hack to all known non-glibc platforms

2012-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArchiver.m:
	* Source/NSUnarchiver.m:
	* Source/NSPortCoder.m:
	* Source/Coder.m:
	Updates to cope with the fact that some BSD ports of gnustep-base
	used incorrect versioning, and that people have released Gorm
	files with versioning incompatible with current releases.