@@ -1,3 +1,9 @@
+2013-06-8  Doug Simons <doug.simons@testplant.com>
+
+       * NSString.m: Implemented precomposedStringWithCanonicalMapping and its
+	   decomposedString... and ...CompatibilityMapping variants when ICU is
+	   available. Without ICU these just return self.
+	   
 2013-01-11  Doug Simons <doug.simons@testplant.com>
 
        * NSString.m: Don't strip trailing path separator in
